<?xml version="1.0"?>
<package>
  <name>hri</name>
  <version>0.0.0</version>
  <description>
    A human robot interface program.
  </description>

  <author>demura.net</author>
  <maintainer email="info@demura.net">demura.net</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>rospeex_msgs</build_depend>
  <build_depend>rospeex_if</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospeex_msgs</run_depend>
  <run_depend>rospeex_if</run_depend>
  <run_depend>message_generation</run_depend>
</package>
